--- a/views/layouts/main.templ
+++ b/views/layouts/main.templ
@@ -6,7 +6,7 @@ import (
 	"ricin9/fiber-chat/views/partials"
 )
 
-templ MainLayout(title string, currentRoom services.Room, messages []services.Message, rooms []services.Room) {
+templ Main(title string, rooms []services.Room, page templ.Component) {
 	<!DOCTYPE html>
 	<html lang="en">
 		<head>
@@ -61,9 +61,7 @@ templ MainLayout(title string, currentRoom services.Room, messages []services.Me
 							}
 							<script>
 							const roomId = window.location.pathname.split('/').pop()
-       					       document
-								.getElementById('room-' + roomId)
-                				.classList.add('selected-room')
+       					       document.getElementById('room-' + roomId)?.classList.add('selected-room')
          				   </script>
 						</ul>
 						<div class="mt-auto">
@@ -83,7 +81,9 @@ templ MainLayout(title string, currentRoom services.Room, messages []services.Me
 					</div>
 				</div>
 				<!-- Main Content -->
-				@partials.RoomContent(currentRoom, messages)
+				<div id="room-content" class="flex-1 flex flex-col content-center">
+					@page
+				</div>
 			</div>
 			<!-- Create Room Modal -->
 			<div
