--- a/views/partials/messages-range.templ
+++ b/views/partials/messages-range.templ
@@ -6,9 +6,9 @@ import "ricin9/fiber-chat/services"
 templ MessagesRange(room services.Room, messages []services.Message, nextPage int) {
 	for idx, message := range messages {
 		if idx == 0 {
-			@Message(room.ID, message, true, nextPage)
+			@Message(message, Pagination{room.ID, nextPage})
 		} else {
-			@Message(room.ID, message, false, 0)
+			@Message(message, Pagination{})
 		}
 	}
 }
