--- a/views/layouts/auth.templ
+++ b/views/layouts/auth.templ
@@ -1,5 +1,7 @@
 package layouts
 
+import "ricin9/fiber-chat/views/partials"
+
 templ AuthLayout(title string, page templ.Component) {
 	<html lang="en">
 		<head>
@@ -8,6 +10,7 @@ templ AuthLayout(title string, page templ.Component) {
 			<title>{ title }</title>
 			<script src="/vendor/htmx@2.0.2.min.js"></script>
 			<link rel="stylesheet" href="/css/output.css"/>
+			@partials.Favicons()
 		</head>
 		<body class="bg-gray-100 flex items-center justify-center min-h-screen">
 			<div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
