--- a/views/partials/message.templ
+++ b/views/partials/message.templ
@@ -6,8 +6,8 @@ import (
 )
 
 type Pagination struct {
-	RoomID   int
-	nextPage int
+	RoomID int
+	Cursor int
 }
 
 templ Message(message services.Message, pagination Pagination) {
