--- a/views/partials/messages.templ
+++ b/views/partials/messages.templ
@@ -5,12 +5,12 @@ import (
 	"ricin9/fiber-chat/services"
 )
 
-templ Messages(room services.Room, messages []services.Message, nextPage int) {
+templ Messages(room services.Room, messages []services.Message, cursor int) {
 	<div
 		class="flex-1 overflow-y-auto p-4 scroll-auto"
 		id={ fmt.Sprintf("room-%d-messages", room.ID) }
-		onscroll="handleMessagesScroll"
+		onscroll="handleMessagesScroll(this)"
 	>
-		@MessagesRange(room, messages, nextPage)
+		@MessagesRange(room, messages, cursor)
 	</div>
 }
